--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -53,7 +53,7 @@
   margin-top: 20px;
 }
 
-.login-username {
+.login-email{
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   width: 200px;
   margin-top: 20px;
